# hs-ttp

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  help-text.txt  hs-ttp.cabal
src/: CLIUtil.hs  HttpServer.hs  Main.hs  SimpleHttp.hs  TCPServer.hs
