cabal-version:   3.0
name:            hs-ttp
version:         0.1.0.0
synopsis:        A simple, low-ish-level http server
license:         MIT
license-file:    LICENSE
author:          Jack Kibort
maintainer:      jkibort928@gmail.com
build-type:      Simple

common warnings
    ghc-options: -Wall

executable hs-ttp
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, network, network-uri, bytestring, directory, unix, split, time
    hs-source-dirs:   src
    other-modules:    CLIUtil, TCPServer, SimpleHttp
    default-language: Haskell2010
